# displayxr-demo-modelviewer

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  NOTICE  PORTING.md  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml  no-vendored-math.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  hud_bar.cpp  hud_bar.h  main.cpp  stb_impl.cpp
android/src/main/java/com/displayxr/model_viewer_vk_android/: MainActivity.kt
android/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/src/main/res/values/: ic_launcher_background.xml
assets/: README.md
common/: CMakeLists.txt  atlas_capture.cpp  atlas_capture.h  atlas_capture_macos.mm  display3d_view.c  display3d_view.h  dxr_math.h  hud_renderer.cpp  hud_renderer.h  input_handler.cpp  input_handler.h  leia_math.h  stb_image_impl_macos.cpp  text_overlay.cpp  xr_session_common.cpp  xr_session_common.h
installer/: DisplayXRModelViewerInstaller.nsi  build-installer.bat
installer/macos/: Distribution.xml  build_installer.sh  create_app_bundle.sh
installer/macos/resources/: welcome.html
linux/: CMakeLists.txt  main.cpp  stb_image_impl_linux.cpp
macos/: CMakeLists.txt  main.mm
macos/assets/: README.md
macos/displayxr/: model_viewer_handle_vk_macos.displayxr.json
model_common/: CMakeLists.txt  model_loader.cpp  model_loader.h  model_loader_assimp.cpp  model_loader_backends.h  model_loader_fbx.cpp  model_loader_gltf.cpp  model_loader_material.cpp  model_loader_material.h  model_loader_obj.cpp  model_loader_stl.cpp  model_loader_usd.cpp  model_renderer.cpp  model_renderer.h  model_vulkan_utils.cpp  model_vulkan_utils.h
model_common/shaders/: brdf_lut.frag  fullscreen.vert  ibl_common.glsl  irradiance.frag  pbr.frag  pbr.vert  prefilter.frag  sky.glsl  skybox.frag
openxr_includes/openxr/: XR_EXT_app_launcher.h  XR_EXT_display_info.h  XR_EXT_macos_gl_binding.h  XR_EXT_mcp_tools.h  XR_EXT_spatial_workspace.h  XR_EXT_view_rig.h  XR_EXT_workspace_file_dialog.h
scripts/: build-with-deps.bat  build_linux.sh  build_macos.sh  build_windows.bat  dev_register.bat  run_macos_dev.sh  run_modelviewer_handle_vk_linux.sh  run_modelviewer_linux.sh  sign-release.ps1
windows/: CMakeLists.txt  main.cpp  model_viewer_openxr_ext_vk.manifest  resource.rc  xr_session.cpp  xr_session.h
windows/displayxr/: model_viewer_handle_vk_win.displayxr.json
